<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F6F3F2"
            android:orientation="vertical">
            <include layout="@layout/layout_mnote_menu_font_style_gravity"/>
            <TextView
                style="@style/mnote_menu_title"
                android:text="@string/mnote_menu_title_text"/>
            <include layout="@layout/layout_mnote_menu_title"/>
            <TextView
                style="@style/mnote_menu_title"
                android:text="@string/mnote_menu_list_text"/>
            <include layout="@layout/layout_mnote_menu_list"/>
            <TextView
                style="@style/mnote_menu_title"
                android:text="@string/mnote_menu_background_color_text"/>
            <include layout="@layout/layout_mnote_menu_background_color"/>
            <TextView
                style="@style/mnote_menu_title"
                android:text="@string/mnote_menu_text_color_text"/>
            <include layout="@layout/layout_mnote_menu_text_color"/>
            <TextView
                style="@style/mnote_menu_title"
                android:text="@string/mnote_menu_add_and_remove_cells_text"/>
            <include layout="@layout/layout_mnote_menu_cell_edit"/>
            <TextView
                style="@style/mnote_menu_title"
                android:paddingTop="2dip"
                android:text="@string/mnote_menu_freeze_unfreeze_text"/>
            <include layout="@layout/layout_mnote_menu_freeze_unfreeze"/>
            <TextView
                style="@style/mnote_menu_title"
                android:text="@string/mnote_menu_sort_text"/>
            <include layout="@layout/layout_mnote_menu_sort"/>
        </LinearLayout>
    </ScrollView>

</layout>