<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <android.support.v7.widget.CardView
            style="@style/mnote_menu_card">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.jrtech.android.widget.mNote.MNoteOptionalMenu
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:image="@drawable/btn_mnote_menu_row_insert_above"
                    app:optionalEnbale="false"
                    app:title="@string/mnote_menu_insert_row_above"/>
                <View style="@style/mnote_menu_divider_line"/>
                <com.jrtech.android.widget.mNote.MNoteOptionalMenu
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:image="@drawable/btn_mnote_menu_row_insert_below"
                    app:optionalEnbale="false"
                    app:title="@string/mnote_menu_insert_row_Below"/>
                <View style="@style/mnote_menu_divider_line"/>
                <com.jrtech.android.widget.mNote.MNoteOptionalMenu
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:image="@drawable/btn_mnote_menu_column_insert_left"
                    app:optionalEnbale="false"
                    app:title="@string/mnote_menu_insert_column_left"/>
                <View style="@style/mnote_menu_divider_line"/>
                <com.jrtech.android.widget.mNote.MNoteOptionalMenu
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:image="@drawable/btn_mnote_menu_column_insert_right"
                    app:optionalEnbale="false"
                    app:title="@string/mnote_menu_insert_column_right"/>
                <View style="@style/mnote_menu_divider_line"/>
                <com.jrtech.android.widget.mNote.MNoteOptionalMenu
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:image="@drawable/btn_mnote_menu_row_delete"
                    app:optionalEnbale="false"
                    app:title="@string/mnote_menu_insert_delete_row"/>
                <View style="@style/mnote_menu_divider_line"/>
                <com.jrtech.android.widget.mNote.MNoteOptionalMenu
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:image="@drawable/btn_mnote_menu_column_delete"
                    app:optionalEnbale="false"
                    app:title="@string/mnote_menu_insert_delete_column"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/mnote_menu_card"
            android:layout_marginTop="10dip">
            <com.jrtech.android.widget.mNote.MNoteOptionalMenu
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:image="@drawable/btn_mnote_menu_column_adjust"
                app:optionalEnbale="false"
                app:title="@string/mnote_menu_change_column_width"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/mnote_menu_card"
            android:layout_marginTop="10dip">
            <com.jrtech.android.widget.mNote.MNoteOptionalMenu
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:image="@drawable/btn_mnote_menu_cells_merge"
                app:optionalEnbale="false"
                app:title="@string/mnote_menu_merge_cells"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/mnote_menu_card"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="10dip">
            <com.jrtech.android.widget.mNote.MNoteOptionalMenu
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:image="@drawable/btn_mnote_menu_word_wrap_yes"
                app:optionalEnbale="false"
                app:title="@string/mnote_menu_word_wrap"/>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</layout>