<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.CardView
        style="@style/mnote_menu_card">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.jrtech.android.widget.mNote.MNoteOptionalMenu
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:image="@drawable/btn_mnote_menu_row_column_freeze"
                app:optionalEnbale="false"
                app:title="@string/mnote_menu_freeze_row_column"/>
            <View style="@style/mnote_menu_divider_line"/>
            <com.jrtech.android.widget.mNote.MNoteOptionalMenu
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:image="@drawable/btn_mnote_menu_column_freeze"
                app:optionalEnbale="false"
                app:title="@string/mnote_menu_freeze_column"/>
            <View style="@style/mnote_menu_divider_line"/>
            <com.jrtech.android.widget.mNote.MNoteOptionalMenu
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:image="@drawable/btn_mnote_menu_row_freeze"
                app:optionalEnbale="false"
                app:title="@string/mnote_menu_freeze_row"/>


        </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>